mudança para serviço genérico
