# src/data/models.py
@@ -5,12 +5,12 @@ import uuid
 
 class Transactions(models.Model):
     id = models.CharField(max_length=128, default=uuid.uuid4, blank=False, unique=True, primary_key=True)
-    buyer_uuid = models.CharField(max_length=128, default=uuid.uuid4, blank=False, unique=True)
-    seller_uuid = models.CharField(max_length=128, default=uuid.uuid4, blank=False, unique=True)
+    to_uuid = models.CharField(max_length=128, default=uuid.uuid4, blank=False, unique=True)
+    from_uuid = models.CharField(max_length=128, default=uuid.uuid4, blank=False, unique=True)
     object = models.ForeignKey(Object, blank=False)
     price = models.FloatField(blank=False)
 
-    AWAITING_SELLER_CONFIRMATION = "Awaiting seller confirmation"
+    AWAITING_CONFIRMATION = "Awaiting confirmation"
     AWAITING_PAYMENT = "Awaiting payment"
     AWAITING_SHIPPING = "Awaiting shipping"
     SHIPPED = "Shipped"
@@ -18,7 +18,7 @@ class Transactions(models.Model):
     COMPLETED = "Completed"
 
     STATE = (
-        ("AWAITING_SELLER_CONFIRMATION", AWAITING_SELLER_CONFIRMATION),
+        ("AWAITING_CONFIRMATION", AWAITING_CONFIRMATION),
         ("AWAITING_PAYMENT", AWAITING_PAYMENT),
         ("AWAITING_SHIPPING", AWAITING_SHIPPING),
         ("SHIPPED", SHIPPED),
@@ -26,7 +26,7 @@ class Transactions(models.Model):
         ("COMPLETED", COMPLETED),
     )
 
-    state = models.CharField(choices=STATE, db_index=True, default=AWAITING_SELLER_CONFIRMATION, max_length=100)
+    state = models.CharField(choices=STATE, db_index=True, default=AWAITING_CONFIRMATION, max_length=100)
 
     created_at = models.DateTimeField(auto_now_add=True)
     updated_at = models.DateTimeField(auto_now=True)
